using linked list over arrayList