@@ -22,7 +22,7 @@ import com.bombinggames.wurfelengine.core.gameobjects.DestructionParticle;
 import com.bombinggames.wurfelengine.core.map.Chunk;
 import com.bombinggames.wurfelengine.core.map.Coordinate;
 import com.bombinggames.wurfelengine.core.map.rendering.RenderCell;
-import java.util.ArrayList;
+import java.util.LinkedList;
 
 /**
  * The <i>CLGameController</i> is for the game code. Put engine code into
@@ -115,11 +115,11 @@ public class CLGameController extends Controller implements Telegraph {
 		spawnPlayers();
 		
 		if (tutorialVanya == null){
-			ArrayList<Vanya> foundVanya = getPlayer(0).getPosition().getEntitiesNearby(10*RenderCell.GAME_EDGELENGTH, Vanya.class);
+			LinkedList<Vanya> foundVanya = getPlayer(0).getPosition().getEntitiesNearby(10*RenderCell.GAME_EDGELENGTH, Vanya.class);
 			if (foundVanya.isEmpty())
 				tutorialVanya = (Vanya) new Vanya().spawn(new Coordinate(-3, 8, 6).toPoint());
 			else {
-				tutorialVanya = foundVanya.get(0);
+				tutorialVanya = foundVanya.getFirst();
 			}
 		}
 		
