@@ -41,7 +41,8 @@ import com.bombinggames.wurfelengine.core.gameobjects.MovableEntity;
 import com.bombinggames.wurfelengine.core.gameobjects.Particle;
 import com.bombinggames.wurfelengine.core.gameobjects.ParticleType;
 import com.bombinggames.wurfelengine.core.map.Coordinate;
-import java.util.ArrayList;
+import com.bombinggames.wurfelengine.core.map.Point;
+import java.util.LinkedList;
 
 /**
  * A bullet is a moving object which can destroy and damage entities or the
@@ -106,7 +107,7 @@ public class Bullet extends MovableEntity {
 		}
 
         //check character hit
-		ArrayList<AbstractEntity> entitylist = getCollidingEntities();
+		LinkedList<AbstractEntity> entitylist = getCollidingEntities();
 		//entitylist.remove(gun);//remove self from list to prevent self shooting
 		//remove
 		entitylist.removeIf(
@@ -115,7 +116,7 @@ public class Bullet extends MovableEntity {
 		if (!entitylist.isEmpty()) {
 			MessageManager.getInstance().dispatchMessage(
 				this,
-				entitylist.get(0),//damage only the first unit on the list
+				entitylist.getFirst(),//damage only the first unit on the list
 				Events.damage.getId(),
 				damage
 			);
